llvm/test/tools/llubi/alloca_large_size.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose --max-mem=100 < %s 2>&1 | FileCheck %s

define void @main() {
  %alloc_dyn = alloca i32, i32 100
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Error: Insufficient stack space.
; CHECK-NEXT: error: Execution of function 'main' failed.
